# tsmp3

./: .gitignore  README.md  RUN.txt  TSMP3_Certificate.cer  TSMP3_Certificate.pfx  TSMP3_Private.key  build.bat  downloader.py  gui_downloader.py  package.json  requirements.txt  tsconfig.json
build_ffmpeg/: build.sh
companion/: go.mod  main.go
desktop/: AudioConverter.cpp  AudioConverter.h  CMakeLists.txt  main.cpp  resources.rc
extension/: background.js  content.js  manifest.json  popup.html  popup.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: YouTubeForm.astro
src/pages/: index.astro
src/styles/: global.css
web/: index.html
ymp3-desktop.exe.WebView2/EBWebView/: Local State
ymp3-desktop.exe.WebView2/EBWebView/BrowserMetrics/: BrowserMetrics-69ED38BB-2514.pma
ymp3-desktop.exe.WebView2/EBWebView/Default/: BrowsingTopicsState  DIPS  Preferences  Secure Preferences
ymp3-desktop.exe.WebView2/EBWebView/Default/DawnGraphiteCache/: index
ymp3-desktop.exe.WebView2/EBWebView/Default/DawnWebGPUCache/: index
ymp3-desktop.exe.WebView2/EBWebView/Default/Extension Rules/: LOG
ymp3-desktop.exe.WebView2/EBWebView/Default/Extension Scripts/: LOG
ymp3-desktop.exe.WebView2/EBWebView/Default/Extension State/: LOG
ymp3-desktop.exe.WebView2/EBWebView/Default/GPUCache/: index
ymp3-desktop.exe.WebView2/EBWebView/GrShaderCache/: data_0  data_1  index
ymp3-desktop.exe.WebView2/EBWebView/GraphiteDawnCache/: index
ymp3-desktop.exe.WebView2/EBWebView/ShaderCache/: index
(+9 files in other folders)
